# emailSender

./: config.ini  consumer.py  producer.py  pyproject.toml
database/: models.py
