[tool.poetry]
name = "consumer"
version = "0.1.0"
description = ""
authors = ["Serhii Nesterenko <sy.nesterenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pika = "^1.3.2"
mongoengine = "^0.27.0"
faker = "^19.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
